откорректировано задание 4го ДЗ

--- a/src/components/review-form/styles.module.css
+++ b/src/components/review-form/styles.module.css
@@ -3,7 +3,8 @@
     background-color: #bbb;
     border: solid;
     min-width: 300px;
-    margin: 5px;
+    margin-left: 20px;
+    margin-bottom: 16px;
     padding: 10px;
 }
 
