--- a/src/components/restaurant/styles.module.css
+++ b/src/components/restaurant/styles.module.css
@@ -1,4 +1,5 @@
 .nameRest {
+    margin-top: 10px;
     font-weight: bold;
     color: #c95422;
     padding-left: 10px;
@@ -18,5 +19,5 @@
 }
 
 h3 {
-    margin-left: 20px;
+    margin-left: 30px;
 }
