--- a/src/components/restaurants-list/styles.module.css
+++ b/src/components/restaurants-list/styles.module.css
@@ -1,3 +1,12 @@
+.restList {
+    display: flex;
+    justify-content: space-around;
+    background-color: #2c2c2c;
+    margin: 0;
+    padding: 20px;
+}
+
 .restaurant {
-    list-style-type: none
+    list-style-type: none;
+    text-align: center;
 }
