--- a/src/components/restaurant/styles.module.css
+++ b/src/components/restaurant/styles.module.css
@@ -1,6 +1,5 @@
 .nameRest {
     margin-top: 20px;
-    margin-bottom: 5px;
     font-weight: bold;
     color: #c95422;
     padding-left: 10px;
@@ -19,10 +18,9 @@
     display: block;
 }
 
-h3 {
-    margin-left: 30px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+.nameH3 {
+    background-color: #bbb;
+    padding-bottom: 0;
 }
 
 ul {
