--- a/src/components/review-form/styles.module.css
+++ b/src/components/review-form/styles.module.css
@@ -3,8 +3,7 @@
     background-color: #bbb;
     border: solid;
     min-width: 300px;
-    margin-left: 20px;
-    margin-bottom: 16px;
+    margin: 16px 20px;
     padding: 10px;
 }
 
