--- a/src/components/restaurants-list/styles.module.css
+++ b/src/components/restaurants-list/styles.module.css
@@ -1,12 +1,14 @@
 .restList {
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     justify-content: space-around;
     background-color: #2c2c2c;
     margin: 0;
-    padding: 20px;
 }
 
 .restaurant {
     list-style-type: none;
     text-align: center;
+    margin: 20px;
 }
